# smtu-ctf-tests

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml  req.txt
backend/apps/auth/: routers.py  schema.py
backend/apps/base_repo/: base_class.py
backend/apps/users/: models.py  routers.py  schema.py  service.py
backend/config/: settings.py
backend/utils/: save_image.py
frontend/: Dockerfile
