[project]
name = "ctf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "docker>=7.1.0",
    "fastapi>=0.115.13",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn[standart]>=0.34.3",
]
